--- a/backend/.env.example
+++ b/backend/.env.example
@@ -33,13 +33,13 @@ MAIL_PORT=2525
 MAIL_USERNAME=66b40ab7c52f40
 MAIL_PASSWORD=b1098be9a30eb2
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=noreply@igram.com
+MAIL_FROM_ADDRESS=noreply@final.com
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_ACCESS_KEY_ID=AKIA3DO7HTBLEXQT5PUI
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=ap-northeast-1
+AWS_BUCKET=kredo-blog-app
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 PUSHER_APP_ID=
